# fiap-pyspark

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml
src/: main.py
src/business/: business_logic.py
src/config/: app_config.py  pagamentos_schema.py  pedidos_schema.py  settings.yaml
src/io/: data_reader.py  data_writer.py
src/pipeline/: pipeline.py
src/session/: spark_session_manager.py
tests/: test_business_logic.py
